Fixed header creating extra white space on Chrome

--- a/spurs-nation.css
+++ b/spurs-nation.css
@@ -27,6 +27,7 @@ body{
     padding-left: 1%;
     padding-right: 1%;
     /*! height: 80%; */
+    top: 0;
 }
 .en-share .logo {
     flex-basis: 40%;
@@ -279,7 +280,7 @@ p.blurb {
     /*! border-bottom: 1px solid black; */
 }
 .author-container figcaption {
-    display: none;
+/*     display: none; */
 }
 .hst-freeform hdnce-e hdnce-item-84206{
     color: #5E5E5E;
@@ -723,6 +724,7 @@ margin-left: 2.25%;
         order: 1;
         margin-left: 1.5em;
         margin-right: 2em;
+        /*! flex-shrink: 1; */
     }
     
     .zone-b .without_u img{
@@ -741,6 +743,9 @@ margin-left: 2.25%;
         flex-basis: 30%;
         order: 2;
         margin-right: 1.5em;
+        /*! flex-shrink: 1; */
+        /*! flex-wrap: wrap; */
+        /*! position: fixed; */
     }
     
 
